<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:elevation="5dp"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        >

        <LinearLayout
            android:id="@+id/llTitleBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <LinearLayout
                android:background="@drawable/card_alert_dialog_abbrev_option_1_title"
                android:layout_width="0dp"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/option1"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_dialog_option_1_title"
                    android:textStyle="bold"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/calibri_regular"
                    android:textSize="16sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/orange"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:background="@drawable/card_alert_dialog_abbrev_option_2_title"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/option2"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_dialog_option_2_title"
                    android:textStyle="bold"
                    android:fontFamily="@font/calibri_regular"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llTitleBox"
            android:background="@drawable/card_alert_dialog_abbrev_content_1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_title"
                android:textStyle="bold"
                android:fontFamily="@font/calibri_regular"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReadings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="7"
                tools:listitem="@layout/item_alert_dialog_abbrev" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card_orange_5_rad"
                android:layout_gravity="end"
                android:layout_margin="15dp"


                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri_regular"
                    android:textColor="@color/white"
                    android:text="@string/button_close"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:id="@+id/buttonCloseWhite"
                    android:clickable="true"
                    android:focusable="true"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llBb"
            android:visibility="gone"
            tools:visibility="visible"
            android:background="@drawable/card_alert_dialog_abbrev_content_2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_title"
                android:textStyle="bold"
                android:fontFamily="@font/calibri_regular"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_other_1"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/calibri_regular"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_other_2"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/calibri_regular"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_other_3"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/calibri_regular"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_other_4"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/calibri_regular"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_other_5"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/calibri_regular"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_content_other_6"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/calibri_regular"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card_white_5_rad"
                android:layout_gravity="end"
                android:layout_margin="15dp"


                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri_regular"
                    android:textColor="@color/orange"
                    android:text="@string/button_close"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:id="@+id/buttonCloseOrange"
                    android:clickable="true"
                    android:focusable="true"
                    />

            </LinearLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>